--- a/client/stylesheets/site.css
+++ b/client/stylesheets/site.css
@@ -28,7 +28,7 @@ body {
 	background: #FEFEFE;
 	border: 2px solid #FAFAFA;
 	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
-	margin: 0 2px 15px;
+	margin: 0 2px 15px 10px;
 	-webkit-column-break-inside: avoid;
 	-moz-column-break-inside: avoid;
 	column-break-inside: avoid;
@@ -36,7 +36,7 @@ body {
 	padding-bottom: 5px;
 	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
 	opacity: 1;
-	
+
 	-webkit-transition: all .2s ease;
 	-moz-transition: all .2s ease;
 	-o-transition: all .2s ease;
@@ -85,4 +85,9 @@ body {
 
 .home {
 	text-align:center;
+}
+
+.textarea-height {
+	height: 100px;
+	text-align: top;
 }
